# bazel-learning

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  Dockerfile.dev  LICENSE  Makefile  README.md  WORKSPACE  docker-compose.dev.yml  docker-compose.yml  requirements.in  requirements.txt
archive/tools/pytest_qa/: pytest_wrapper.py
bazel_docker_container/: .gitlab-ci.yml  Dockerfile  docker-compose.yml
bazel_rules/: pylint.bzl  pytest.bzl  pytest_wrapper.py
project1/: BUILD.bazel  project1.py
project2/: BUILD.bazel
project3/: BUILD.bazel
project4/: BUILD.bazel
project5/: BUILD.bazel
project5/src/: main.py
project6/: BUILD.bazel
project6/tests/: test_main.py
project7/: BUILD.bazel
projects/project1/: BUILD.bazel  main.py
projects/project1_service/: BUILD.bazel
projects/project2/: BUILD.bazel  project2.py
projects/project2/src/: main.py
projects/project2/tests/: test_main.py
projects/project2_service/tests/: test_main.py
projects/project3/: BUILD.bazel  project3.py
projects/project3/src/: main.py
projects/project3/tests/: test_main.py
projects/project3_service/tests/: test_main.py
projects/project4/: BUILD.bazel  main.py
projects/project4/src/: main.py
projects/project4/tests/: test_main.py
projects/project4_service/: BUILD.bazel
projects/project4_service/tests/: test_main.py
projects/project5/: BUILD.bazel  main.py
projects/project5/src/: hi.py
projects/project5/src/utils/: text_generator.py
projects/project5/tests/: test_main.py
projects/project5_service/: BUILD.bazel  main.py
projects/project5_service/src/: hi.py
projects/project5_service/src/utils/: text_generator.py
projects/project5_service/tests/: test_main.py
projects/project6/: BUILD.bazel
projects/project6/my_library/: text_generator.py
projects/project6/src/: main.py
projects/project6/tests/: test_text_generator.py
projects/project6_library/: BUILD.bazel
projects/project6_library/my_library/: text_generator.py
projects/project6_library/tests/: test_text_generator.py
projects/project7/: BUILD.bazel  main.py
projects/project7/src/: hi.py  main.py
projects/project7/tests/: test_main.py
projects/project7_service/: BUILD.bazel  main.py
projects/project7_service/src/: hi.py
projects/project7_service/tests/: test_main.py
projects/project8/: BUILD.bazel  main.py
projects/project8/src/: hi.py
projects/project8/tests/: test_main.py
projects/project8_service/: BUILD.bazel  main.py
projects/project8_service/src/: hi.py
projects/project8_service/tests/: test_main.py
services/service1/: main.py
services/service2/: BUILD.bazel
services/service2/src/: main.py
services/service2/tests/: test_main.py
services/service3/: BUILD.bazel
services/service3/src/: main.py
services/service3/tests/: test_main.py
services/service4/: BUILD.bazel
services/service4/src/: main.py
services/service4/tests/: test_main.py
services/service5/: BUILD.bazel  main.py
services/service5/src/: hi.py  main.py
services/service5/tests/: test_main.py
tools/pip/: BUILD.bazel  requirements.in  requirements.txt
tools/pytest/: BUILD.bazel  pytest.bzl  wrapper_pytest.py
tools/pytest_full/: BUILD.bazel  pytest.bzl
tools/pytest_qa/: .coveragerc  BUILD.bazel  pytest.bzl  pytest_wrapper.py
tools/qa/: BUILD.bazel  qa.bzl  wrapper_autopep8.py  wrapper_black.py  wrapper_flake8.py  wrapper_isort.py  wrapper_mypy.py  wrapper_pylint.py
