load("//bazel_rules:pylint.bzl", "pylint")
load("@rules_python//python:defs.bzl", "py_test")


py_binary(
    name = "project5",
    srcs = glob(["src/*.py"]),
    main = "src/main.py"
)

pylint(
    name = "lint",
    srcs = glob(["src/*.py", "tests/*.py"]),
)

py_test(
    name = "unit-tests",
    srcs = ["tests/test_main.py"],
    main = "tests/test_main.py",
    deps = [
        "project5"
    ],
)
