load("//tools/qa:qa.bzl", "autopep8", "black", "flake8", "isort", "mypy", "pylint", "pytest_test")

py_binary(
    name = "main",
    srcs = glob(["src/*.py"]),
    main = "src/main.py"
)

pytest_test(
    name = "unit",
    srcs = glob(["*.py", "**/*.py"]),
    cov = ["project4_service.src"],
    cov_min = 80,
    size = "small",
)

autopep8(
    name = "autopep8",
    srcs = glob(["*.py", "**/*.py"]),
    size = "small",
)

black(
    name = "black",
    srcs = glob(["*.py", "**/*.py"]),
    size = "small",
)


flake8(
    name = "flake8",
    srcs = glob(["*.py", "**/*.py"]),
    size = "small",
)

isort(
    name = "isort",
    srcs = glob(["*.py", "**/*.py"]),
    size = "small",
)

mypy(
    name = "mypy",
    srcs = glob(["*.py", "**/*.py"]),
    size = "small",
)

pylint(
    name = "pylint",
    srcs = glob(["*.py", "**/*.py"]),
    size = "small",
)
