load("//tools/qa:qa.bzl", "standard_qa")

py_library(
    name = "my_library",
    srcs = glob(include = ["*.py", "**/*.py"], exclude = ["test/*.py", "tests/**/*.py"]),
    visibility = ["//visibility:public"],
)

standard_qa(
    srcs = glob(["*.py", "**/*.py"]),
    cov = ["project6.my_library"],
    cov_min = 100,
    size = "small",
)
