load("//tools/pytest:pytest.bzl", "pytest_test")
load("//tools/qa:qa.bzl", "autopep8", "black", "flake8", "isort", "mypy", "pylint")

py_binary(
    name = "main",
    srcs = glob(["src/*.py"]),
    main = "src/main.py"
)

pytest_test(
    name = "test",
    # cov = "projects.project7/src",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ]
)

autopep8(
    name = "autopep8",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)

black(
    name = "black",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)


flake8(
    name = "flake8",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)

isort(
    name = "isort",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
#    args = [
#        "--line-length=10"
#    ]
)

mypy(
    name = "mypy",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)

pylint(
    name = "pylint",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
#    args = [
#        "--max-line-length=10"
#    ]
)
