load("//tools/qa:qa.bzl", "standard_qa")

deps = [
    "//projects/project6:my_library"
]

py_binary(
    name = "main",
    srcs = glob(include = ["*.py", "**/*.py"], exclude = ["test/*.py", "test/**/*.py"]),
    main = "main.py",
    deps = deps
)

standard_qa(
    srcs = glob(["*.py", "**/*.py"]),
    cov = ["projects.project7.src"],
    cov_min = 100,
    size = "small",
    deps = deps
)
