load("//tools/qa:qa.bzl", "autopep8", "black", "flake8", "isort", "mypy", "pylint", "pytest_test")

py_binary(
    name = "main",
    srcs = glob(["src/*.py"]),
    main = "src/main.py"
)

pytest_test(
    name = "test",
    # cov = "projects.project7/src",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ]
)

autopep8(
    name = "autopep8",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)

black(
    name = "black",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)


flake8(
    name = "flake8",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
)

isort(
    name = "isort",
    srcs = glob(["**/*.py"]),
    deps = [
        ":main"
    ],
#    args = [
#        "--line-length=10"
#    ]
)

# TODO: Fix
#mypy(
#    name = "mypy",
#    srcs = glob(["**/*.py"])
#)

pylint(
    name = "pylint",
    srcs = glob(["**/*.py"]),
#    args = [
#        "--max-line-length=10"
#    ]
)
