load("//tools/qa:qa.bzl", "standard_qa")

py_binary(
    name = "main",
    srcs = glob(["src/*.py"]),
    main = "src/main.py"
)

standard_qa(
    srcs = glob(["*.py", "**/*.py"]),
    cov = ["service5.src"],
    cov_min = 80,
    size = "small",
#    pylint_kwargs = {
#        "args": [
#            "--max-line-length=10"
#        ]
#    }
)
