load("//tools/qa:qa.bzl", "standard_qa")

py_binary(
    name = "main",
    srcs = glob(include = ["*.py", "**/*.py"], exclude = ["test/*.py", "test/**/*.py"]),
    main = "main.py"
)

standard_qa(
    srcs = glob(["*.py", "**/*.py"]),
    cov = ["services.service5.src"],
    cov_min = 100,
    size = "small",
#    pylint_kwargs = {
#        "args": [
#            "--max-line-length=10"
#        ]
#    }
)
